# ZeusEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CodeStyle.md  README.md  ZeusEditor.ini  buildRunTest.sh  formatFolder.sh  程序员的自我修养：链接、装载与库.7z
.github/workflows/: c-cpp.yml
bestPractice/: CMakeLists.txt  bestPractice.cpp
bestPractice/cpp/: SmartPointTest.hpp
bestPractice/cpp/cppQuiz/: CMakeLists.txt  cppQuiz.cpp  cppQuiz.hpp
bestPractice/cpp/cppWeekly/: cppWeekly.cpp  cppWeekly.h
bestPractice/cpp/features/: CMakeLists.txt  FunctionPointer.cpp  FunctionPointer.h  SmartPointTest.cpp  SmartPointTest.h  cppFeature.cpp  cppFeature.h  template.h  variant.cpp  variant.h
bestPractice/cpp/multiThread/: CMakeLists.txt  ManagingThreads.cpp  ManagingThreads.h  ThreadGuard.h  main.cpp  multiThread.cpp  multiThread.h  multiThreadManageTest.cpp  sharingDataBetweenThreads.cpp  sharingDataBetweenThreads.h  sync.cpp  sync.h  synchronization.cpp  synchronization.h  threadMutexTest.cpp  threadMutexTest.h
bestPractice/design/: CMakeLists.txt  design_test.cpp
bestPractice/design/facade/: facade.cpp  facade.h  facede.md
bestPractice/design/pimpl/: pimpl.md  pimplTest.cpp  pimplTest.h
doc/C++/: REf.md  smart pointer.md  std_optional.md  智能指针.md
doc/C++/cppQuiz/: cppQuiz.md
doc/C++/cppWeekly/: cppWeekly.md
doc/C++/feature/: Synchronization.md  multi-thread.md  sharedData.md  threadManage.md  volatile.md
doc/Design/: ECS.md
doc/Event/: Ref.md  event driven development.md  ref2.md
engine/: CMakeLists.txt
engine/editor/: CMakeLists.txt
engine/editor/include/: editor.h
engine/editor/source/: editor.cpp  main  main.cpp
engine/runtime/: CMakeLists.txt  Camera.cpp  Camera.h  CubeScene.cpp  CubeScene.h  Engine.cpp  Engine.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelScene.cpp  ModelScene.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  TestScene1.cpp  TestScene1.cpp.bak  depth_scene.cpp  depth_scene.h  engine.cpp  engine.h  glad.c  main.cpp
engine/runtime(abandon)/: engine.cpp  engine.h  glad.c
engine/runtime(abandon)/function/render/: camera.cpp  camera.h
engine/runtime(abandon)/resource/: Shader.cpp
engine/runtime/backend/: GLEnums.h  GLUtils.h
engine/runtime/core/: event.h
engine/runtime/core/base/: singleton.h
engine/runtime/function/framework/component/: CameraComponent.cpp  CameraComponent.h  Component.h  MeshComponent.cpp  MeshComponent.h  TransformComponent.cpp  TransformComponent.h  camera_component.cpp  camera_component.h  component.h  mesh_component.cpp  mesh_component.h  transform_component.cpp  transform_component.h
engine/runtime/function/framework/component/camera/: camera_component.h
engine/runtime/function/framework/level/: level.cpp  level.h
engine/runtime/function/framework/object/: Object.cpp  Object.h  object.cpp  object.h
engine/runtime/function/framework/world/: world_manager.h
engine/runtime/function/render/: Material.h  Shader.cpp  Shader.h  camera.cpp  camera.h  material.cpp  material.h
engine/runtime/include/glad/: glad.h
engine/runtime/resource/: AssetManager.cpp  AssetManager.h  ConfigManager.cpp  ConfigManager.h  Shader.cpp  Shader.h  asset_manager.cpp  asset_manager.h  geometries.h
engine/runtime/resource/geometries/: CubeGeometry.cpp  CubeGeometry.h  Geometries.h  Geometry.h  QuadGeometry.cpp  QuadGeometry.h  SphereGeometry.cpp  SphereGeometry.h  geometry.h
engine/runtime/resource/textures/: Texture.cpp  Texture.h
engine/runtime/samples/: BlendScene.cpp  BlendScene.h  CubeScene.cpp  CubeScene.h  DepthScene.cpp  DepthScene.h  ModelScene.cpp  ModelScene.h  PBRScene.cpp  PBRScene.h  PBRTextureScene.cpp  PBRTextureScene.h  StencilScene.cpp  StencilScene.h  depth_scene.cpp  depth_scene.h  stencil_scene.cpp
engine/unit_test/: CMakeLists.txt  TestInheritClassRttr.cpp  TestRttr.cpp  example.cpp  instance_test.cpp  object_test.cpp  test_classes.h  test_events.cpp  test_type.cpp  test_type.h
resources/shader/: blendDiscard.fs  blinn_phong.fs  default.fs  default.vs  pbr.fs  pbrWithTextures.fs  phong.fs  phongSampleColor.fs  sampleDiffuse.fs  shader.fs  shader.vs  transparent.fs
shader/: default.fs  default.vs  phong.fs  phong.vs
test/testGDB/: testGDB.cpp
testUtils/: CMakeLists.txt  testUtils.cpp
testUtils/cpp/cppQuiz/: cppQuiz.cpp  cppQuiz.hpp
testUtils/cpp/cppWeekly/: cppWeekly.cpp  cppWeekly.h
testUtils/testGDB/: gdbTips.md
testUtils/testPimpl/: Widget.cpp  Widget.h  pimpl.md
tool/: CMakeLists.txt  tool.cpp
utils/: CMakeLists.txt  Common.h  Singleton.h
zeus/: CMakeLists.txt  main.cpp
zeus/editor/: CMakeLists.txt
zeus/editor/include/: editor.h
zeus/editor/source/: editor.cpp  main.cpp
