cmake_minimum_required (VERSION 3.15)

set(TARGET_NAME ZeusEditor)

# file 用法
file(GLOB EDITOR_HEADERS CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
file(GLOB EDITOR_SOURCES CONFIGURE_DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/source/*.cpp)
# source_group  用法
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${EDITOR_HEADERS} ${EDITOR_SOURCES} ${EDITOR_RESOURCE})

add_executable (${TARGET_NAME} ${EDITOR_HEADERS} ${EDITOR_SOURCES}) 
